# resty

./: .gitignore  .gitmodules  Cargo.toml  README.md  Readme.md
docs/macros/: endpoint.md
docs/traits/: Deserialize.md  Serialize.md
example/: file_connector.rs
examples/: .gitignore  Cargo.toml  file_socket.rs  spec.json
examples/petstore/: Cargo.toml  check.rs  db.rs  main.rs  pet.json
examples/petstore/models/: api_response.rs  category.rs  mod.rs  order.rs  pet.rs  tag.rs  user.rs
examples/petstore/responses/: mod.rs
examples/petstore/routes/pet/: findByStatus.rs  mod.rs
examples/petstore/routes/user/: mod.rs
examples/petstore/schemas/: api_response.rs  category.rs  order.rs  pet.rs  tag.rs
macros/: Cargo.toml  README.md
macros/docs/macros/: endpoint.md  file_routing.md  manual_routing.md  middleware.md  path_routing.md
macros/src/: endpoint.rs  generate.rs  lib.rs  middleware.rs  parse.rs  routing.rs
macros/src/spec/: mod.rs
resty/: Cargo.toml  README.md  check.rs
resty/docs/traits/: Serialize.md
resty/examples/: file_socket.rs
resty/src/: http_error.rs  lib.rs  parse.rs  request.rs  response.rs  routing.rs  runtime.rs  serde.rs  server_sent_events.rs
resty/src/serde/: json.rs  mod.rs  xml.rs
resty/src/socket/: mod.rs  tcp.rs  unix.rs
resty_macros/: Cargo.toml
resty_macros/docs/traits/: Deserialize.md
resty_macros/src/: endpoint.rs  lib.rs  routing.rs
resty_macros/src/spec/: meta.rs  mod.rs  parse.rs  path.rs  response.rs  schema.rs
resty_macros/src/spec/definition/: info.rs  mod.rs  path.rs  schema.rs  security.rs  server.rs
src/: lib.rs  parse.rs  request.rs  response.rs  router.rs  routing.rs  runtime.rs
src/api/: mod.rs
src/connector/: mod.rs  tcp.rs  unix.rs
src/parse/: mod.rs  request.rs  response.rs
src/socket/: tcp.rs
