[package]
name = "resty"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "A fast, concurrent and multi-threadable REST framework"
documentation = "https://docs.rs/resty"
repository = "https://github.com/shyguy1412/resty"
keywords = ["async", "rest", "http", "framework", "server"]

[lib]

[dependencies]
httparse = "1.10.1"
linkme = "0.3.35"
smol = "2.0.2"
url = "2.5.8"

[dependencies.resty_macros]
path = "./macros"
version = "0.1.3"
