[package]
name = "resty_macros"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "Procedural macros for resty"
documentation = "https://docs.rs/resty_macros"
repository = "https://github.com/shyguy1412/resty"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.44"
syn = { version = "2.0.114", features = ["full"] }
