[package]
name = "resty"
edition = "2024"
version.workspace = true
license = "MIT"
description = "A fast, concurrent and multi-threadable REST framework"
documentation = "https://docs.rs/resty"
repository = "https://github.com/shyguy1412/resty"
keywords = ["async", "rest", "http", "framework", "server"]

[lib]

[dependencies]
httparse = "1.10.1"
linkme = "0.3.35"
smol = "2.0.2"
url = "2.5.8"

serde = {version = "1.0.228", optional = true}
serde_json = { version = "1.0.150", optional = true }
serde-xml-rs = { version = "0.8.2", optional = true }


[dependencies.resty_macros]
path = "../resty_macros"
version = "0.1.3"

[features]
serde = ["dep:serde"]
json = ["dep:serde_json"]
xml = ["dep:serde-xml-rs"]
