[package]
name = "resty_macros"
edition = "2024"
version.workspace = true
license = "MIT"
description = "Procedural macros for resty"
documentation = "https://docs.rs/resty_macros"
repository = "https://github.com/shyguy1412/resty"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
syn = { version = "2.0.114", features = ["full"] }

[dependencies.proc_macro_argue]
path = "./argue"
version = "0.1.1"
